--- a/index.Rmd
+++ b/index.Rmd
@@ -20,8 +20,8 @@ summary(cars)
 
 You can also embed plots, for example:
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r label, out.width = "85%", fig.cap = "caption"}
+knitr::include_graphics("/Users/maullz/Desktop/Covid19CCT/oxford_cases.pdf")
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
