drop-down menu working

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Covid-19 Community Case Tracker"
+runtime: shiny
 ---
 
 ```{r setup, include=FALSE}
@@ -9,40 +10,56 @@ knitr::opts_chunk$set(echo = TRUE)
 ## About
 While many sources are providing data about Covid-19 cases in the UK, it is not so easy to find comprehensive data about cases in specific counties. This website aims to provide visualisations of the Covid-19 data for the county you live in, so you can see if the response in your community is helping to flatten your county's curve. 
 
-## Oxfordshire
+## Covid-19 Data for your county
 
-You can also embed plots, for example:
+Select your county from the drop-down menu:
+```{r eruptions, echo=FALSE}
+data <- read.csv("covid_data.csv", row.names=1)
+counties <- row.names(data)
+selectInput(
+  'county', label = 'County:',
+  choices = counties, selected = "Oxfordshire"
+)
 
-```{r, echo = FALSE,  warning = FALSE}
-load("oxford_data.Rda")
+renderPlot({
 library(dplyr, warn.conflict = FALSE)
-last_point <- df %>% # last trading day
-  slice(which.max(dates))
 library(ggplot2, warn.conflict = FALSE)
 library(bbplot, warn.conflict = FALSE)
-ggplot(df, aes(x = dates, y = oxford_cases)) +
+cases <- as.matrix(data)[input$county,]
+dates <- seq(as.Date("2000/03/09"), by = "days", length.out = length(data[input$county,]))
+df <- data.frame(dates,cases)
+last_point <- df %>% # most recent value
+  slice(which.max(dates))
+ggplot(df, aes(x = dates, y = cases)) +
 geom_line(colour = "#007f7f", size = 1) +
 geom_hline(yintercept = 0, size = 1, colour="#333333") +
-labs(x = "Date", y = "Oxfordshire Covid-19 Cases", title = "Oxfordshire Covid-19 Cases (Linear)") +
+labs(x = "Date", y = paste(input$county,  "Covid-19 Cases"), title = paste(input$county,  "Covid-19 Cases (Linear)")) +
 scale_x_date(date_breaks = "3 days", date_labels = "%d/%m") + 
 theme(axis.text.x = element_text(angle = 90)) +
-geom_point(data = last_point, aes(x = dates, y = oxford_cases), col = "#007f7f", shape = 21, fill = "white", size = 2, stroke = 1.7) +
-geom_text(data = last_point, aes(x = dates, y = oxford_cases, label = oxford_cases), size = 6, vjust = 2.0, nudge_x = 0.5) +
+geom_point(data = last_point, aes(x = dates, y = cases), col = "#007f7f", shape = 21, fill = "white", size = 2, stroke = 1.7) +
+geom_text(data = last_point, aes(x = dates, y = cases, label = cases), size = 6, vjust = 2.0, nudge_x = 0.5) +
 bbc_style() +
-theme(plot.title = element_text(hjust = 0.5, size=20)) 
-
-ggplot(df, aes(x = dates, y = oxford_cases)) +
+theme(plot.title = element_text(hjust = 0.5, size=20))
+})
+renderPlot({
+cases <- as.matrix(data)[input$county,]
+dates <- seq(as.Date("2000/03/09"), by = "days", length.out = length(data[input$county,]))
+df <- data.frame(dates,cases)
+last_point <- df %>% # most recent value
+  slice(which.max(dates))
+ggplot(df, aes(x = dates, y = cases)) +
 geom_abline(intercept = 10, slope=2) +
 geom_line(colour = "#007f7f", size = 1) +
 geom_hline(yintercept = 0, size = 1, colour="#333333") +
-labs(x = "Date", y = "Oxfordshire Covid-19 Cases", title = "Oxfordshire Covid-19 Cases (Log)") +
+labs(x = "Date", y = paste(input$county,  "Covid-19 Cases"), title = paste(input$county,  "Covid-19 Cases (Log)")) +
 scale_x_date(date_breaks = "3 days", date_labels = "%d/%m") + 
 scale_y_continuous(trans = 'log2') +
 theme(axis.text.x = element_text(angle = 90)) +
-geom_point(data = last_point, aes(x = dates, y = oxford_cases), col = "#007f7f", shape = 21, fill = "white", size = 2, stroke = 1.7) +
-geom_text(data = last_point, aes(x = dates, y = oxford_cases, label = oxford_cases), size = 6, vjust = 2.0, nudge_x = 0.5) +
+geom_point(data = last_point, aes(x = dates, y = cases), col = "#007f7f", shape = 21, fill = "white", size = 2, stroke = 1.7) +
+geom_text(data = last_point, aes(x = dates, y = cases, label = cases), size = 6, vjust = 2.0, nudge_x = 0.5) +
 bbc_style() +
-theme(plot.title = element_text(hjust = 0.5, size=20)) 
+theme(plot.title = element_text(hjust = 0.5, size=20))
+})
 ```
 
 
