--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Covid-19 Community Case Tracker"
+title: "Covid-19 County Case Tracker"
 runtime: shiny
 ---
 
@@ -8,14 +8,14 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## About
-While many sources are providing data about Covid-19 cases in the UK, it is not so easy to find comprehensive data about cases in specific counties. This website aims to provide visualisations of the Covid-19 data for the county you live in, so you can see if the response in your community is helping to flatten your county's curve. 
+While many sources are providing national data about Covid-19 cases, it is not so easy to find data about the cases in each English county. This website provides visualisations of the Covid-19 data for the county you live in, so you can see if the response in your community is helping to flatten your county's specific Covid-19 curve. 
 
-## Covid-19 Data for your county
+## Covid-19 Data For Your County
 
 Select your county from the drop-down menu:
 ```{r eruptions, echo=FALSE}
 data <- read.csv("covid_data.csv", row.names=1)
-counties <- row.names(data)
+counties <- sort(row.names(data))
 selectInput(
   'county', label = 'County:',
   choices = counties, selected = "Oxfordshire"
@@ -33,9 +33,9 @@ last_point <- df %>% # most recent value
 ggplot(df, aes(x = dates, y = cases)) +
 geom_line(colour = "#007f7f", size = 1) +
 geom_hline(yintercept = 0, size = 1, colour="#333333") +
-labs(x = "Date", y = paste(input$county,  "Covid-19 Cases"), title = paste(input$county,  "Covid-19 Cases (Linear)")) +
+labs(x = "Date", y = paste(input$county,  "Covid-19 Cases"), title = paste(input$county,  "Total Cases of COVID-19 (Linear Scale)")) +
 scale_x_date(date_breaks = "3 days", date_labels = "%d/%m") + 
-theme(axis.text.x = element_text(angle = 90)) +
+theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1)) +
 geom_point(data = last_point, aes(x = dates, y = cases), col = "#007f7f", shape = 21, fill = "white", size = 2, stroke = 1.7) +
 geom_text(data = last_point, aes(x = dates, y = cases, label = cases), size = 6, vjust = 2.0, nudge_x = 0.5) +
 bbc_style() +
@@ -48,15 +48,32 @@ df <- data.frame(dates,cases)
 last_point <- df %>% # most recent value
   slice(which.max(dates))
 ggplot(df, aes(x = dates, y = cases)) +
-geom_abline(intercept = 10, slope=2) +
 geom_line(colour = "#007f7f", size = 1) +
-geom_hline(yintercept = 0, size = 1, colour="#333333") +
-labs(x = "Date", y = paste(input$county,  "Covid-19 Cases"), title = paste(input$county,  "Covid-19 Cases (Log)")) +
+labs(x = "Date", y = paste(input$county,  "Covid-19 Cases"), title = paste(input$county,  "Total Cases of COVID-19 (Logarithmic Scale)")) +
 scale_x_date(date_breaks = "3 days", date_labels = "%d/%m") + 
 scale_y_continuous(trans = 'log2') +
-theme(axis.text.x = element_text(angle = 90)) +
+geom_hline(yintercept = 0, size = 2, colour="#333333") +
+theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1)) +
 geom_point(data = last_point, aes(x = dates, y = cases), col = "#007f7f", shape = 21, fill = "white", size = 2, stroke = 1.7) +
 geom_text(data = last_point, aes(x = dates, y = cases, label = cases), size = 6, vjust = 2.0, nudge_x = 0.5) +
+bbc_style() +
+theme(plot.title = element_text(hjust = 0.5, size=20))
+})
+renderPlot({
+A <- data[,-1]
+B <- data[,-length(data)]
+diff <- A-B
+cases <- as.matrix(diff)[input$county,]
+dates <- seq(as.Date("2000/03/10"), by = "days", length.out = length(cases))
+df <- data.frame(dates,cases)
+last_point <- df %>% # most recent value
+  slice(which.max(dates))
+ggplot(df, aes(x = dates, y = cases)) +
+geom_bar(stat="identity",colour = "white",fill="steelblue") +
+geom_hline(yintercept = 0, size = 1, colour="#333333") +
+labs(x = "Date", y = paste(input$county,  "Covid-19 Cases"), title = paste(input$county,  "Daily Cases of COVID-19")) +
+scale_x_date(date_breaks = "3 days", date_labels = "%d/%m") + 
+theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1)) +
 bbc_style() +
 theme(plot.title = element_text(hjust = 0.5, size=20))
 })
