--- a/index.Rmd
+++ b/index.Rmd
@@ -8,12 +8,15 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## About
-While many sources are providing national data about Covid-19 cases, it is not so easy to find data about the cases in each English county. This website provides visualisations of the Covid-19 data for the county you live in, so you can see if the response in your community is helping to flatten your county's specific Covid-19 curve. 
+While many sources are providing national data about Covid-19 cases, it is not so easy to find data about the cases in each region. This website provides visualisations of the Covid-19 data for the county you live in, so you can see if the response in your community is helping to flatten your county's specific Covid-19 curve. 
 
-## Covid-19 Data For Your County
+## Covid-19 Data For English Counties (Scroll down for Scotland)
 
-Select your county from the drop-down menu:
+Select your English county from the drop-down menu:
 ```{r eruptions, echo=FALSE}
+library(dplyr, warn.conflict = FALSE)
+library(ggplot2, warn.conflict = FALSE)
+library(bbplot, warn.conflict = FALSE)
 data <- read.csv("covid_data.csv", row.names=1)
 counties <- sort(row.names(data))
 selectInput(
@@ -22,9 +25,6 @@ selectInput(
 )
 
 renderPlot({
-library(dplyr, warn.conflict = FALSE)
-library(ggplot2, warn.conflict = FALSE)
-library(bbplot, warn.conflict = FALSE)
 cases <- as.matrix(data)[input$county,]
 dates <- seq(as.Date("2000/03/09"), by = "days", length.out = length(data[input$county,]))
 df <- data.frame(dates,cases)
@@ -79,4 +79,68 @@ theme(plot.title = element_text(hjust = 0.5, size=20))
 })
 ```
 
+## Covid-19 Data For Scottish Regions 
 
+Select your Scottish region from the drop-down menu:
+```{r scottish_eruptions, echo=FALSE}
+scottish_data <- read.csv("scotland_covid_data.csv", row.names=1)
+scottish_counties <- sort(row.names(scottish_data))
+selectInput(
+  'region', label = 'Region:',
+  choices = scottish_counties, selected = "Greater Glasgow and Clyde"
+)
+
+renderPlot({
+cases <- as.matrix(scottish_data)[input$region,]
+dates <- seq(as.Date("2000/03/09"), by = "days", length.out = length(scottish_data[input$region,]))
+df <- data.frame(dates,cases)
+last_point <- df %>% # most recent value
+  slice(which.max(dates))
+ggplot(df, aes(x = dates, y = cases)) +
+geom_line(colour = "#007f7f", size = 1) +
+geom_hline(yintercept = 0, size = 1, colour="#333333") +
+labs(x = "Date", y = paste(input$region,  "Covid-19 Cases"), title = paste(input$region,  "Total Cases of COVID-19 (Linear Scale)")) +
+scale_x_date(date_breaks = "3 days", date_labels = "%d/%m") + 
+theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1)) +
+geom_point(data = last_point, aes(x = dates, y = cases), col = "#007f7f", shape = 21, fill = "white", size = 2, stroke = 1.7) +
+geom_text(data = last_point, aes(x = dates, y = cases, label = cases), size = 6, vjust = 2.0, nudge_x = 0.5) +
+bbc_style() +
+theme(plot.title = element_text(hjust = 0.5, size=20))
+})
+renderPlot({
+cases <- as.matrix(scottish_data)[input$region,]
+dates <- seq(as.Date("2000/03/09"), by = "days", length.out = length(scottish_data[input$region,]))
+df <- data.frame(dates,cases)
+last_point <- df %>% # most recent value
+  slice(which.max(dates))
+ggplot(df, aes(x = dates, y = cases)) +
+geom_line(colour = "#007f7f", size = 1) +
+labs(x = "Date", y = paste(input$region,  "Covid-19 Cases"), title = paste(input$region,  "Total Cases of COVID-19 (Logarithmic Scale)")) +
+scale_x_date(date_breaks = "3 days", date_labels = "%d/%m") + 
+scale_y_continuous(trans = 'log2') +
+geom_hline(yintercept = 0, size = 2, colour="#333333") +
+theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1)) +
+geom_point(data = last_point, aes(x = dates, y = cases), col = "#007f7f", shape = 21, fill = "white", size = 2, stroke = 1.7) +
+geom_text(data = last_point, aes(x = dates, y = cases, label = cases), size = 6, vjust = 2.0, nudge_x = 0.5) +
+bbc_style() +
+theme(plot.title = element_text(hjust = 0.5, size=20))
+})
+renderPlot({
+A <- scottish_data[,-1]
+B <- scottish_data[,-length(scottish_data)]
+diff <- A-B
+cases <- as.matrix(diff)[input$region,]
+dates <- seq(as.Date("2000/03/10"), by = "days", length.out = length(cases))
+df <- data.frame(dates,cases)
+last_point <- df %>% # most recent value
+  slice(which.max(dates))
+ggplot(df, aes(x = dates, y = cases)) +
+geom_bar(stat="identity",colour = "white",fill="steelblue") +
+geom_hline(yintercept = 0, size = 1, colour="#333333") +
+labs(x = "Date", y = paste(input$region,  "Covid-19 Cases"), title = paste(input$region,  "Daily Cases of COVID-19")) +
+scale_x_date(date_breaks = "3 days", date_labels = "%d/%m") + 
+theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1)) +
+bbc_style() +
+theme(plot.title = element_text(hjust = 0.5, size=20))
+})
+```
