Added new intro and time stamps to updates

--- a/index.Rmd
+++ b/index.Rmd
@@ -8,11 +8,15 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## About
-While many sources are providing national data about Covid-19 cases, it is not so easy to find data about the cases in each region. This website provides visualisations of the Covid-19 data for the county you live in, so you can see if the response in your community is helping to flatten your county's specific Covid-19 curve. 
+While many sources are providing national data on the UK coronavirus outbreak, these figures are largely driven by the huge amount of cases in major cities. In order to see the real impact of Covid-19 on your local community, **this application provides visualisations of the coronavirus data that has been made available for English and Scottish counties**. Over the coming months, these visualisations will help to track how your community's efforts are helping to flatten your county's specific Covid-19 curve.
 
-## Covid-19 Data For English Counties (Scroll down for Scotland)
+All Covid-19 data for English counties has been sourced from the UK Department of Health and Social Care, and all data for Scottish counties has been sourced from the Scottish Government. 
 
-Select your English county from the drop-down menu:
+## England County Covid-19 Data (Scroll Down For Scotland)
+
+As of April 1st 2020, this data is up-to-date with the official figures released by the UK Department of Health and Social Care.
+
+Select your county from the drop-down menu:
 ```{r eruptions, echo=FALSE}
 library(dplyr, warn.conflict = FALSE)
 library(ggplot2, warn.conflict = FALSE)
@@ -33,7 +37,7 @@ last_point <- df %>% # most recent value
 ggplot(df, aes(x = dates, y = cases)) +
 geom_line(colour = "#007f7f", size = 1) +
 geom_hline(yintercept = 0, size = 1, colour="#333333") +
-labs(x = "Date", y = paste(input$county,  "Covid-19 Cases"), title = paste(input$county,  "Total Cases of COVID-19 (Linear Scale)")) +
+labs(x = "Date", y = paste(input$county,  "Covid-19 Cases"), title = paste(input$county,  "Total Covid-19 Cases (Linear Scale)")) +
 scale_x_date(date_breaks = "3 days", date_labels = "%d/%m") + 
 theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1)) +
 geom_point(data = last_point, aes(x = dates, y = cases), col = "#007f7f", shape = 21, fill = "white", size = 2, stroke = 1.7) +
@@ -41,6 +45,7 @@ geom_text(data = last_point, aes(x = dates, y = cases, label = cases), size = 6,
 bbc_style() +
 theme(plot.title = element_text(hjust = 0.5, size=20))
 })
+
 renderPlot({
 cases <- as.matrix(data)[input$county,]
 dates <- seq(as.Date("2000/03/09"), by = "days", length.out = length(data[input$county,]))
@@ -49,7 +54,7 @@ last_point <- df %>% # most recent value
   slice(which.max(dates))
 ggplot(df, aes(x = dates, y = cases)) +
 geom_line(colour = "#007f7f", size = 1) +
-labs(x = "Date", y = paste(input$county,  "Covid-19 Cases"), title = paste(input$county,  "Total Cases of COVID-19 (Logarithmic Scale)")) +
+labs(x = "Date", y = paste(input$county,  "Covid-19 Cases"), title = paste(input$county,  "Total Covid-19 Cases (Logarithmic Scale)")) +
 scale_x_date(date_breaks = "3 days", date_labels = "%d/%m") + 
 scale_y_continuous(trans = 'log2') +
 geom_hline(yintercept = 0, size = 2, colour="#333333") +
@@ -59,6 +64,7 @@ geom_text(data = last_point, aes(x = dates, y = cases, label = cases), size = 6,
 bbc_style() +
 theme(plot.title = element_text(hjust = 0.5, size=20))
 })
+
 renderPlot({
 A <- data[,-1]
 B <- data[,-length(data)]
@@ -71,22 +77,47 @@ last_point <- df %>% # most recent value
 ggplot(df, aes(x = dates, y = cases)) +
 geom_bar(stat="identity",colour = "white",fill="steelblue") +
 geom_hline(yintercept = 0, size = 1, colour="#333333") +
-labs(x = "Date", y = paste(input$county,  "Covid-19 Cases"), title = paste(input$county,  "Daily Cases of COVID-19")) +
+labs(x = "Date", y = paste(input$county,  "Covid-19 Cases"), title = paste(input$county,  "Daily Covid-19 Cases")) +
 scale_x_date(date_breaks = "3 days", date_labels = "%d/%m") + 
+theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1)) +
+bbc_style() +
+theme(plot.title = element_text(hjust = 0.5, size=20))
+})
+
+renderPlot({
+A <- data[,-1]
+B <- data[,-length(data)]
+diff <- A/B 
+diff[is.na(diff) | diff=="Inf"] <- 0
+diff <- diff - 1
+diff[diff==-1] <- 0
+cases <- as.matrix(diff)[input$county,]
+dates <- seq(as.Date("2000/03/10"), by = "days", length.out = length(cases))
+df <- data.frame(dates,cases)
+last_point <- df %>% # most recent value
+  slice(which.max(dates))
+ggplot(df, aes(x = dates, y = cases)) +
+geom_line(colour = "#007f7f", size = 1) +
+geom_hline(yintercept = 0, size = 1, colour="#333333") +
+labs(x = "Date", y = paste(input$county,  "Covid-19 Cases"), title = paste(input$county,  "Daily % Change (On Previous Day's Total)")) +
+scale_x_date(date_breaks = "3 days", date_labels = "%d/%m") + 
+scale_y_continuous(labels = scales::percent) +
 theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1)) +
 bbc_style() +
 theme(plot.title = element_text(hjust = 0.5, size=20))
 })
 ```
 
-## Covid-19 Data For Scottish Regions 
+## Scotland County Covid-19 Data
 
-Select your Scottish region from the drop-down menu:
+As of April 1st 2020, this data is up-to-date with the official figures released by the Scottish Government.
+
+Select your region from the drop-down menu:
 ```{r scottish_eruptions, echo=FALSE}
 scottish_data <- read.csv("scotland_covid_data.csv", row.names=1)
 scottish_counties <- sort(row.names(scottish_data))
 selectInput(
-  'region', label = 'Region:',
+  'region', label = 'County:',
   choices = scottish_counties, selected = "Greater Glasgow and Clyde"
 )
 
@@ -99,7 +130,7 @@ last_point <- df %>% # most recent value
 ggplot(df, aes(x = dates, y = cases)) +
 geom_line(colour = "#007f7f", size = 1) +
 geom_hline(yintercept = 0, size = 1, colour="#333333") +
-labs(x = "Date", y = paste(input$region,  "Covid-19 Cases"), title = paste(input$region,  "Total Cases of COVID-19 (Linear Scale)")) +
+labs(x = "Date", y = paste(input$region,  "Covid-19 Cases"), title = paste(input$region,  "Total Covid-19 Cases (Linear Scale)")) +
 scale_x_date(date_breaks = "3 days", date_labels = "%d/%m") + 
 theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1)) +
 geom_point(data = last_point, aes(x = dates, y = cases), col = "#007f7f", shape = 21, fill = "white", size = 2, stroke = 1.7) +
@@ -115,7 +146,7 @@ last_point <- df %>% # most recent value
   slice(which.max(dates))
 ggplot(df, aes(x = dates, y = cases)) +
 geom_line(colour = "#007f7f", size = 1) +
-labs(x = "Date", y = paste(input$region,  "Covid-19 Cases"), title = paste(input$region,  "Total Cases of COVID-19 (Logarithmic Scale)")) +
+labs(x = "Date", y = paste(input$region,  "Covid-19 Cases"), title = paste(input$region,  "Total Covid-19 Cases (Logarithmic Scale)")) +
 scale_x_date(date_breaks = "3 days", date_labels = "%d/%m") + 
 scale_y_continuous(trans = 'log2') +
 geom_hline(yintercept = 0, size = 2, colour="#333333") +
@@ -137,8 +168,31 @@ last_point <- df %>% # most recent value
 ggplot(df, aes(x = dates, y = cases)) +
 geom_bar(stat="identity",colour = "white",fill="steelblue") +
 geom_hline(yintercept = 0, size = 1, colour="#333333") +
-labs(x = "Date", y = paste(input$region,  "Covid-19 Cases"), title = paste(input$region,  "Daily Cases of COVID-19")) +
+labs(x = "Date", y = paste(input$region,  "Covid-19 Cases"), title = paste(input$region,  "Daily Covid-19 Cases")) +
 scale_x_date(date_breaks = "3 days", date_labels = "%d/%m") + 
+theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1)) +
+bbc_style() +
+theme(plot.title = element_text(hjust = 0.5, size=20))
+})
+
+renderPlot({
+A <- scottish_data[,-1]
+B <- scottish_data[,-length(scottish_data)]
+diff <- A/B 
+diff[is.na(diff) | diff=="Inf"] <- 0
+diff <- diff - 1
+diff[diff==-1] <- 0
+cases <- as.matrix(diff)[input$region,]
+dates <- seq(as.Date("2000/03/10"), by = "days", length.out = length(cases))
+df <- data.frame(dates,cases)
+last_point <- df %>% # most recent value
+  slice(which.max(dates))
+ggplot(df, aes(x = dates, y = cases)) +
+geom_line(colour = "#007f7f", size = 1) +
+geom_hline(yintercept = 0, size = 1, colour="#333333") +
+labs(x = "Date", y = paste(input$region,  "Covid-19 Cases"), title = paste(input$region,  "Daily % Change (On Previous Day's Total)")) +
+scale_x_date(date_breaks = "3 days", date_labels = "%d/%m") + 
+scale_y_continuous(labels = scales::percent) +
 theme(axis.text.x = element_text(angle = 90, vjust=0.5, hjust=1)) +
 bbc_style() +
 theme(plot.title = element_text(hjust = 0.5, size=20))
